--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<div>
+    <h1 class="title">BOOKS AND COFFEES</h1>
+    <img class="image" src="/images/books.jpeg" alt="books and coffee">
+</div>
+
