--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -9,4 +9,19 @@ a {
 
 h1 {
   color: 15px;
+  padding-top: 30px;
+}
+
+#myMap {
+  height: 400px;
+}
+
+.title{
+  padding-left: 500px;
+}
+
+.image{
+  margin-left: 450px;
+  margin-top: 200px;
+  border-radius: 50%;
 }
